fixed an issue with pool layout where heading would get extra space it did not want

--- a/packages/client2/styles/globals.css
+++ b/packages/client2/styles/globals.css
@@ -82,6 +82,7 @@
   .pool-layout {
     @apply grid gap-10;
     grid-template-columns: 100%;
+    grid-template-rows: auto 1fr;
     grid-template-areas:
       "heading"
       "widgets"
